<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_vendas_layout"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/_vendas" />
        <item
            android:id="@+id/nav_clientes_layout"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/_clientes" />
        <item
            android:id="@+id/nav_produtos_layout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/_produtos" />
        <item
            android:id="@+id/nav_pendencias_layout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/_pendencias" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
