<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.vendafacil.principal.NovaVendaActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/_cliente"
                android:id="@+id/textView2"
                android:layout_marginBottom="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions|textCapWords|textPersonName"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/_endereco"
                android:id="@+id/textView4"
                android:layout_marginBottom="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editText3"
                android:layout_marginBottom="10dp"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/_telefone"
                android:layout_marginBottom="10dp"
                android:id="@+id/textView5" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editText2"
                android:inputType="phone"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/_valor"
                android:layout_marginBottom="10dp"
                android:id="@+id/textView6" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText5"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/_data"
                android:layout_marginBottom="10dp"
                android:id="@+id/textView8" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/editText_data"
                android:hint="@string/_selecionar_data"
                android:inputType="none" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/_observacoes"
                android:layout_marginBottom="10dp"
                android:id="@+id/textView7" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editText4"
                android:layout_marginBottom="10dp"
                android:inputType="text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_cadastrar"
                android:id="@+id/button2"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
